--- a/404.html
+++ b/404.html
@@ -1,1 +1,13 @@
-123
+<!DOCTYPE html>
+<html lang="en">
+<head>
+</head>
+<body>
+
+  <script type="text/javascript">
+  window.location.replace("https://mordvintsevmv.github.io/React_SocialNetwork");
+  </script>
+</body>
+</html>
+
+
